add detail about project

--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
 		<div class="header-container">
 			<div class="header-items">
 				<h1 class="logotype">
-					<a href="home.html">Phoebe Lo</a>
+					<a href="#">Phoebe Lo</a>
 				</h1>
 			</div>
 			<div class="header-items">
@@ -31,7 +31,7 @@
 		</div>
 	</header>
 	<main>
-		<section class="section">
+		<!-- <section class="section">
 			<div class="box">
 				<h2 class="heading">NMG GUIDEBOT</h2>
 					<h3 class="subheading">NMG GuideBot is a conversational application that is implemented as a subscription on WeChat in tradition chinese characters. This application has a conversation with the visitors outside and inside the gallery.</h3>
@@ -47,11 +47,44 @@
 					<h5 class="subtitle">Stage 1 - style guide</h5>
 					<p>During the first stage, we were going to choose a idea to work on as a team. And created a style guide that would show the theme and overall style of the company.</p>
 					<h5 class="subtitle">Stage 2 - Structure</h5>
-					<p>In this week, we started to build a structure with consistency. And also, we could fill real content in it. After we built initial set of our website, we would link all pages together. I created all content and detailed layout for website. I was mainly working on shop, about and shopping cart pages and make the website responsive. Also, I found images for our website.</p>
+					<p>In this week, we started to build a structure with consistency. And also, we could fill real content in it. After we built initial set of our website, we link all pages together. I was mainly working on shop, about and shopping cart pages and make the website responsive. Also, I found images for our website.</p>
 					<h5 class="subtitle">Stage 3 - Developing</h5>
-					<p>Keeping from last week, we were supposed to fill in all real content. Images and icons were supposed to be filled as well. This a week, a full functional website should be prepared. I finalized our content, images and button styles to make them look more consistent.</p>
+					<p>Keeping from last week, we were supposed to fill in all real content. Images and icons were supposed to be filled as well. This a week, a full functional website should be prepared. I finalized our images and button styles to make them look more consistent.</p>
+			</div>
+		</section> -->
+
+		<section class="section">
+			<div class="box">
+				<div class="project-container">
+					<div class="project-category-container">
+						<p class="project-category">UX Design / User Research</p>
+					</div>
+					<div class="project-name-container">
+						<h1 class="project-title"><a href="nmgguidebot.html" class="project-category">NMG GUIDEBOT</a></h1>
+					</div>
+				</div>
+				<div class="project-container">
+					<div class="project-category-container">
+						<p class="project-category">UX / UI / Website Design</p>
+					</div>
+					<div class="project-name-container">
+						<h1 class="project-title"><a href="milo.html" class="project-category">MILO.</a></h1>
+					</div>
+				</div>
 			</div>
 		</section>
 	</main>
+	<footer class="footer">
+		<div class="footer-container">
+			<div class="footer-item">
+				<h5>
+					<a href="index.html">style guide</a>
+				</h5>
+				<h5>
+					<a href="https://github.com/PhoebeYCLo/Project3">github</a>
+				</h5>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
