--- a/about.html
+++ b/about.html
@@ -41,5 +41,17 @@
 			</div>
 		</section>
 	</main>
+	<footer class="footer">
+		<div class="footer-container">
+			<div class="footer-item">
+				<h5>
+					<a href="index.html">style guide</a>
+				</h5>
+				<h5>
+					<a href="https://github.com/PhoebeYCLo/Project3">github</a>
+				</h5>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
