Change the banner color

--- a/nmgguidebot.html
+++ b/nmgguidebot.html
@@ -61,7 +61,7 @@
 
 		<section class="section">
 			<div class="box">
-				<h2 class="heading">NMG GUIDEBOT</h2>
+				<!-- <h2 class="heading">NMG GUIDEBOT</h2> -->
 					<h3 class="subheading">NMG GuideBot is a conversational application that is implemented as a subscription on WeChat in tradition chinese characters. This application has a conversation with the visitors outside and inside the gallery.</h3>
 					<p>New Media Gallery is the New Westminster civic gallery that focuses on new media art around the world. It is located in the Anvil Centre beside the new westminister’s skytrain station. There are 2 curators, and 7 technical supports. The gallery curates exhibitions, performances, workshops and STEAM education programs.</p>
 					<h4 class="title">Opening</h4>
