adding change for layout

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 								<h3 class="subheading">Subheading</h3>
 						<h4 class="title">Paragraph</h4>
 							<h5 class="subtitle">Element:</h5>
-								<p class="text">This is a paragraph.</p>
+								<p class="text">New Media Gallery is the New Westminster civic gallery that focuses on new media art around the world. It is located in the Anvil Centre beside the new westminister’s skytrain station. There are 2 curators, and 7 technical supports. The gallery curates exhibitions, performances, workshops and STEAM education programs.</p>
 				</div>
-				<div class="bio-element">
+				<!-- <div class="bio-element">
 					<h3 class="subheading">Bio</h3>
 						<p>Hi I'm Phoebe, a UX + Front-end developer from Vancouver. I like to turning complex problems into simple, beautiful and human center designs.<br>
 							Currently I'm studying at Simon Fraser University majoring in <strong>Interactive Arts and Technology</strong> and minoring in <strong>print & digital publishing</strong>.
@@ -54,6 +54,33 @@
 					<h3 class="subheading">Project 1</h3>
 						<h4 class="title">NMG GUIDEBOT</h4>
 							<p>NMG GuideBot is a conversational application that is implemented as a subscription on WeChat in tradition chinese characters. This application has a conversation with the visitors outside and inside the gallery.</p>
+				</div> -->
+				<div class="nav-elements">
+					<h3 class="subheading">Navigation</h3>
+					<div class="header-container">
+						<div class="header-items">
+							<h1 class="logotype">
+								<a href="home.html">Phoebe Lo</a>
+							</h1>
+						</div>
+						<div class="header-items">
+							<nav class="nav">
+								<div class="nav-container">
+									<div class="nav-items">
+										<a href="work.html">Work</a>
+									</div>	
+									<div class="nav-items">
+										<a href="about.html">About</a>
+									</div>						
+								</div>
+							</nav>
+						</div>
+					</div>
+				</div>
+				<div class="brand">
+					<h3 class="subheading">Brand Identity</h3>
+					<div class="color-box box1">#252932</div>
+					<div class="color-box box2">#c41e20</div>
 				</div>
 			</div>
 		</section>
