--- a/milo.html
+++ b/milo.html
@@ -61,7 +61,7 @@
 
 		<section class="section">
 			<div class="box">
-				<h2 class="heading">MILO.</h2>
+				<!-- <h2 class="heading">MILO.</h2> -->
 					<h3 class="subheading">MILO. is a online company that sell modern furniture.</h3>
 					<p>In this project, I worked with team of 2. Our mission is be an <strong>UX & Web</strong> designer on this website.<p>
 					<h5 class="subtitle">Stage 1 - style guide</h5>
