--- a/work.html
+++ b/work.html
@@ -74,7 +74,7 @@
 			</div>
 		</section>
 	</main>
-	<footer class="footer">
+	<!-- <footer class="footer">
 		<div class="footer-container">
 			<div class="footer-item">
 				<h5>
@@ -85,6 +85,6 @@
 				</h5>
 			</div>
 		</div>
-	</footer>
+	</footer> -->
 </body>
 </html>
