change content for NMG page

--- a/nmgguidebot.html
+++ b/nmgguidebot.html
@@ -54,7 +54,7 @@
 					<h3>Duration</h3>
 					<p>10 Weeks</p>
 					<h3>Role</h3>
-					<p>UX, User Research, User Testing</p>
+					<p>User Research, User Testing, Prototyping</p>
 				</div>
 			</div>
 		</section>
@@ -62,12 +62,13 @@
 		<section class="section">
 			<div class="box">
 				<!-- <h2 class="heading">NMG GUIDEBOT</h2> -->
-					<h3 class="subheading">NMG GuideBot is a conversational application that is implemented as a subscription on WeChat in tradition chinese characters. This application has a conversation with the visitors outside and inside the gallery.</h3>
-					<p>New Media Gallery is the New Westminster civic gallery that focuses on new media art around the world. It is located in the Anvil Centre beside the new westminister’s skytrain station. There are 2 curators, and 7 technical supports. The gallery curates exhibitions, performances, workshops and STEAM education programs.</p>
-					<h4 class="title">Opening</h4>
-					<p>From our initial observations many of the visitors knew about the gallery from someone they know. There were a majority of the visitors from vancouver which comes from the Gallery’s mandate to draw in more visitors from metro vancouver. During our visit to the performance of last exhibition GYrE and opening of the current Reclaim exhibition, we saw a low diversity in ethnicity. There were more caucasians. However during the exhibition it was evenly diverse with east asians. </p>
-					<h4 class="title">Created for NMG Visitors.</h4>
-					<p>From our own experience as some teammates are Chinese ESL, chinese was the right language to focus on, as we could get the data right away. (lots of Chinese in Vancouver) We were able to get data from ourselves, our Chinese ESL friends and asked questions to Chinese ESL Visitors. We saw that the engagement towards the artworks in the exhibition was high. However, the language barrier affected the understanding of the provided education they received about the artwork. The visitors may not feel a connection with new media art and may not look for more resources by the New Media Gallery.</p>
+					<h3 class="subheading">NMG GuideBot is a conversational application that is implemented as a subscription on WeChat. This application has a conversation with the visitors outside and inside the gallery. The goal is to increases the educational engagement about new media art during the exhibition and with features outside of the exhibition.</h3>
+					<h4 class="title">CONTEXT</h4>
+					<p>This is a user research project within a design research course where the focus was learning ethnographic research methods. We had the opportunity to work with the New Media Gallery, to research their work environment and find out an issue that we can solve through design.</p>
+					<h4 class="title">NMG</h4>
+					<p>New Media Gallery (NMG) is a New Westminster civic gallery that focuses on New Media Art. The gallery curates exhibitions, performances, workshops and STEAM education programs. The gallery aims to reach out to people that art is more than what people know of what art is. The gallery wants people’s perspective to change after visiting. Educating that art can also be shown in technology. That STEM should add Arts to become STEAM.</p>
+					<h4 class="title">RESEARCH</h4>
+					<p>We gather insights through interviews, ethnographic, observations, champion meetings, visitors from surveys and participatory workshops.</p>
 			</div>
 		</section>
 	</main>
