add workshop flow image

--- a/nmgguidebot.html
+++ b/nmgguidebot.html
@@ -65,10 +65,24 @@
 					<h3 class="subheading">NMG GuideBot is a conversational application that is implemented as a subscription on WeChat. This application has a conversation with the visitors outside and inside the gallery. The goal is to increases the educational engagement about new media art during the exhibition and with features outside of the exhibition.</h3>
 					<h4 class="title">CONTEXT</h4>
 					<p>This is a user research project within a design research course where the focus was learning ethnographic research methods. We had the opportunity to work with the New Media Gallery, to research their work environment and find out an issue that we can solve through design.</p>
+					<hr>
 					<h4 class="title">NMG</h4>
-					<p>New Media Gallery (NMG) is a New Westminster civic gallery that focuses on New Media Art. The gallery curates exhibitions, performances, workshops and STEAM education programs. The gallery aims to reach out to people that art is more than what people know of what art is. The gallery wants people’s perspective to change after visiting. Educating that art can also be shown in technology. That STEM should add Arts to become STEAM.</p>
+					<p>New Media Gallery (NMG) is a New Westminster civic gallery that focuses on New Media Art. The gallery curates exhibitions, performances, workshops and STEAM education programs. The gallery aims to reach out to people that art is more than what people know of what art is. The gallery wants people’s perspective to change after visiting. Educating that art can also be shown in technology. That STEM should add Arts to become STEAM.</p><br>
+
 					<h4 class="title">RESEARCH</h4>
-					<p>We gather insights through interviews, ethnographic, observations, champion meetings, visitors from surveys and participatory workshops.</p>
+					<p>We gather insights through interviews, ethnographic, observations, champion meetings, visitors from surveys and participatory workshops.</p><br>
+
+					<h5 class="subtitle">Ethnography</h5>
+					<p>From our initial observations many of the visitors knew about the gallery from someone they know. We observed that there were a majority of the visitors from Vancouver which comes from the Gallery’s mandate to draw in more visitors from metro Vancouver. Also, during our visit to the performance of last exhibition GYRE and the opening of the current Reclaim exhibition, we saw <strong>a low diversity in ethnicity. There were more Caucasians. However, during the exhibition, it was evenly diverse with East Asians.</strong></p>
+
+					<p>Based on the takeaways, we make a design focus which is create a connection and an engagement for the visitors who are interacting with New Media Gallery for their ﬁrst time. However, the initial design focus is too vague. Therefore, we had taken time to really push to narrow down the focus. Our refined design focus is: <strong>Implementing an engagement that connects ESL visitors in order to improve their experience during the exhibition.</strong></p><br>
+
+					<h5 class="subtitle">Participatory Workshop</h5>
+					<p>There are two goals of the workshop. The ﬁrst one is that we still felt the design focus was not in the right spot, and we wanted this workshop to really tune the focus more. The second goal is that we have a concept that has potential, but we are stuck on what the other concept is. Which could be correlating to our uncertainty with the current design focus. <strong>Therefore the workshop activities will need to help us our design focus more to connect with another concept idea.</strong></p>
+
+					<div class="img-container">
+						<img class="projectimage" src="img/workshopflow.jpg" alt="Workshop Flow">
+					</div>
 			</div>
 		</section>
 	</main>
