Finish content and style for MILO

--- a/milo.html
+++ b/milo.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR|Quicksand" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<title>Phoebe Lo</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
 		<div class="header-container">
 			<div class="header-items">
 				<h1 class="logotype">
-					<a href="#">Phoebe Lo</a>
+					<a href="work.html">Phoebe Lo</a>
 				</h1>
 			</div>
 			<div class="header-items">
@@ -31,18 +32,11 @@
 		</div>
 	</header>
 	<main>
-		<!-- <section class="section">
-			<div class="box">
-				<div class="project-header-image">
-					<img src="img/guitebotimgColumn.jpg" alt="NMG Guidebot">
-				</div>
-			</div>
-		</section> -->
 		<section class="head-banner milo">
 			<div class="head-content">
 				<div class="head-title milo-title">
 					<h1>MILO.</h1>
-					<h2>UX / UI / Website Design</h2>
+					<h2>UI / Website Design</h2>
 				</div>
 				<div class="project-description">
 					<h3>Type</h3>
@@ -54,36 +48,90 @@
 					<h3>Duration</h3>
 					<p>4 Weeks</p>
 					<h3>Role</h3>
-					<p>UX, Website development</p>
+					<p>Website developer</p>
 				</div>
+			</div>
+			<div class="index-button">
+				<a href="#">
+					<i class="material-icons">arrow_upward</i>
+				</a>
 			</div>
 		</section>
 
 		<section class="section">
 			<div class="box">
-				<!-- <h2 class="heading">MILO.</h2> -->
-					<h3 class="subheading">MILO. is a online company that sell modern furniture.</h3>
-					<p>In this project, I worked with team of 2. Our mission is be an <strong>UX & Web</strong> designer on this website.<p>
-					<h5 class="subtitle">Stage 1 - style guide</h5>
-					<p>During the first stage, we were going to choose a idea to work on as a team. And created a style guide that would show the theme and overall style of the company.</p>
-					<h5 class="subtitle">Stage 2 - Structure</h5>
-					<p>In this week, we started to build a structure with consistency. And also, we could fill real content in it. After we built initial set of our website, we link all pages together. I was mainly working on shop, about and shopping cart pages and make the website responsive. Also, I found images for our website.</p>
-					<h5 class="subtitle">Stage 3 - Developing</h5>
-					<p>Keeping from last week, we were supposed to fill in all real content. Images and icons were supposed to be filled as well. This a week, a full functional website should be prepared. I finalized our images and button styles to make them look more consistent.</p>
+				<div class="project-brief">
+					<h3 class="subheading">MILO. is a fictional e-commerce site dedicated to selling modern furniture.</h3>
+				</div>
+					
+				<div class="project-context">
+					<h4 class="title milotitle">CONTEXT</h4>
+					<p>This class project was about designing for an imaginary e-commerce site. In this project, I worked in team of 2. In our case, the goal was to create a site selling modern furniture.</p>
+				</div>	
+
+				<hr>
+
+				<div class="body-content">
+					<h4 class="title milotitle">STYLE GUIDE</h4>
+					<p>First stage of the project, is to come up an idea and brainstorm for design for the site. After the brainstorm stage, me and my groupmate decided to work on a furniture website. We wanted to focus on creating a site that look modern and friendly. Therefore, we created a style guide that show the theme and overall style of the company.</p>
+				</div>
+
+				<div class="body-content">
+					<h4 class="title milotitle">BUILDING THE SITE</h4>
+					<p>I was in charge of images selection, building the pages of home, shop, and shopping cart. I also using css to <strong>style some elements/ overall website layout (buttons, table chart etc) and make the site responsive.</strong></p>
+
+					<p>I used Sublime text editor to code out the HTML and CSS in conjunction with Gitkraken to share files between myself and my partner.</p>
+
+					<div class="img-container">
+						<figure class="figure">
+							<img class="projectimage" src="img/milohome.jpg" alt="Home page of MILO. website">
+							<figcaption class="figure-caption">
+								<h6 class="figureheading">Home page</h6>
+							</figcaption>
+						</figure>
+					</div>
+
+					<div class="img-container">
+						<figure class="figure">
+							<img class="projectimage" src="img/miloshop.jpg" alt="Shop page of MILO. website">
+							<figcaption class="figure-caption">
+								<h6 class="figureheading">Shop page</h6>
+							</figcaption>
+						</figure>
+					</div>
+
+					<div class="body-content">
+						<h4 class="heading nmgtitle">View our final prototype <a href="http://www.sfu.ca/~midhatk/IAT339/Project2/index.html" target="_blank">here</a>!</h4>
+					</div>
+
+					<hr>
+
+					<div class="more-project">
+						<h5 class="subtitle">More projects:</h5>
+						<a href="nmgguidebot.html" class="project-link">NMG GuideBot</a> /
+						<a href="milo.html" class="project-link"  id="current-project">MILO.</a>
+					</div>
+				</div>
 			</div>
 		</section>
 	</main>
-	<!-- <footer class="footer">
+	<footer class="footer">
 		<div class="footer-container">
+			<div class="footer-item copyright">
+				© 2019 Phoebe Lo
+			</div>
 			<div class="footer-item">
-				<h5>
-					<a href="index.html">style guide</a>
-				</h5>
-				<h5>
-					<a href="https://github.com/PhoebeYCLo/Project3">github</a>
-				</h5>
+				<a href="index.html" class="footer-link">style guide</a>
+			</div>
+			
+			<div class="footer-item">
+				<a href="index.html#citations" class="footer-link">citations</a>
+			</div>
+			
+			<div class="footer-item">
+				<a href="https://github.com/PhoebeYCLo/Project3" class="footer-link" target="_blank">github</a>
 			</div>
 		</div>
-	</footer> -->
+	</footer>
 </body>
 </html>
