--- a/nmgguidebot.html
+++ b/nmgguidebot.html
@@ -52,10 +52,10 @@
 				</div>
 			</div>
 			<div class="index-button">
-			<a href="#">
-				<i class="material-icons">arrow_upward</i>
-			</a>
-		</div>
+				<a href="#">
+					<i class="material-icons">arrow_upward</i>
+				</a>
+			</div>
 		</section>
 
 		<section class="section">
@@ -181,7 +181,7 @@
 			</div>
 			
 			<div class="footer-item">
-				<a href="https://github.com/PhoebeYCLo/Project3" class="footer-link">github</a>
+				<a href="https://github.com/PhoebeYCLo/Project3" class="footer-link" target="_blank">github</a>
 			</div>
 		</div>
 	</footer>
