Final edit done

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 		<div class="header-container">
 			<div class="header-items">
 				<h1 class="logotype">
-					<a href="home.html">Phoebe Lo</a>
+					<a href="work.html">Phoebe Lo</a>
 				</h1>
 			</div>
 			<div class="header-items">
@@ -33,25 +33,29 @@
 	<main>
 		<section class="section">
 			<div class="box">
-				<h3 class="heading">Bio</h3>
-					<p>Hi I'm Phoebe -<br>
-					a UX + Front-end developer from Vancouver. I like to turning complex problems into simple, beautiful and human center designs.<br>
-					Currently I'm studying at Simon Fraser University majoring in <strong>Interactive Arts and Technology</strong> and minoring in <strong>print & digital publishing</strong>.
-					</p>
+				<h2 class="heading">Hi I'm Phoebe -</h2><br>
+				<p>a <strong>UX + Front-end developer</strong> from Vancouver, BC. I like to turning complex problems into simple, beautiful and human center designs. Currently I'm studying at Simon Fraser University majoring in <strong>Interactive Arts and Technology</strong> and minoring in <strong>print & digital publishing</strong>.
+				</p>
 			</div>
 		</section>
 	</main>
-	<footer class="footer">
+	<!-- <footer class="footer">
 		<div class="footer-container">
+			<div class="footer-item copyright">
+				© 2019 Phoebe Lo
+			</div>
 			<div class="footer-item">
-				<h5>
-					<a href="index.html">style guide</a>
-				</h5>
-				<h5>
-					<a href="https://github.com/PhoebeYCLo/Project3">github</a>
-				</h5>
+				<a href="index.html" class="footer-link">style guide</a>
+			</div>
+			
+			<div class="footer-item">
+				<a href="index.html#citations" class="footer-link">citations</a>
+			</div>
+			
+			<div class="footer-item">
+				<a href="https://github.com/PhoebeYCLo/Project3" class="footer-link" target="_blank">github</a>
 			</div>
 		</div>
-	</footer>
+	</footer> -->
 </body>
 </html>
