--- a/milo.html
+++ b/milo.html
@@ -65,19 +65,19 @@
 				</div>
 					
 				<div class="project-context">
-					<h4 class="title milotitle">CONTEXT</h4>
+					<h4 class="title nmgtitle">CONTEXT</h4>
 					<p>This class project was about designing for an imaginary e-commerce site. In this project, I worked in team of 2. In our case, the goal was to create a site selling modern furniture.</p>
 				</div>	
 
 				<hr>
 
 				<div class="body-content">
-					<h4 class="title milotitle">STYLE GUIDE</h4>
+					<h4 class="title nmgtitle">STYLE GUIDE</h4>
 					<p>First stage of the project, is to come up an idea and brainstorm for design for the site. After the brainstorm stage, me and my groupmate decided to work on a furniture website. We wanted to focus on creating a site that look modern and friendly. Therefore, we created a style guide that show the theme and overall style of the company.</p>
 				</div>
 
 				<div class="body-content">
-					<h4 class="title milotitle">BUILDING THE SITE</h4>
+					<h4 class="title nmgtitle">BUILDING THE SITE</h4>
 					<p>I was in charge of images selection, building the pages of home, shop, and shopping cart. I also using css to <strong>style some elements/ overall website layout (buttons, table chart etc) and make the site responsive.</strong></p>
 
 					<p>I used Sublime text editor to code out the HTML and CSS in conjunction with Gitkraken to share files between myself and my partner.</p>
