--- a/work.html
+++ b/work.html
@@ -33,28 +33,6 @@
 	<main>
 		<!-- <section class="section">
 			<div class="box">
-				<h2 class="heading">NMG GUIDEBOT</h2>
-					<h3 class="subheading">NMG GuideBot is a conversational application that is implemented as a subscription on WeChat in tradition chinese characters. This application has a conversation with the visitors outside and inside the gallery.</h3>
-					<p>New Media Gallery is the New Westminster civic gallery that focuses on new media art around the world. It is located in the Anvil Centre beside the new westminister’s skytrain station. There are 2 curators, and 7 technical supports. The gallery curates exhibitions, performances, workshops and STEAM education programs.</p>
-					<h4 class="title">Opening</h4>
-					<p>From our initial observations many of the visitors knew about the gallery from someone they know. There were a majority of the visitors from vancouver which comes from the Gallery’s mandate to draw in more visitors from metro vancouver. During our visit to the performance of last exhibition GYrE and opening of the current Reclaim exhibition, we saw a low diversity in ethnicity. There were more caucasians. However during the exhibition it was evenly diverse with east asians. </p>
-					<h4 class="title">Created for NMG Visitors.</h4>
-					<p>From our own experience as some teammates are Chinese ESL, chinese was the right language to focus on, as we could get the data right away. (lots of Chinese in Vancouver) We were able to get data from ourselves, our Chinese ESL friends and asked questions to Chinese ESL Visitors. We saw that the engagement towards the artworks in the exhibition was high. However, the language barrier affected the understanding of the provided education they received about the artwork. The visitors may not feel a connection with new media art and may not look for more resources by the New Media Gallery.</p>
-
-				<h2 class="heading">MILO.</h2>
-					<h3 class="subheading">MILO. is a online company that sell modern furniture.</h3>
-					<p>In this project, I worked with team of 2. Our mission is be an <strong>UX & Web</strong> designer on this website.<p>
-					<h5 class="subtitle">Stage 1 - style guide</h5>
-					<p>During the first stage, we were going to choose a idea to work on as a team. And created a style guide that would show the theme and overall style of the company.</p>
-					<h5 class="subtitle">Stage 2 - Structure</h5>
-					<p>In this week, we started to build a structure with consistency. And also, we could fill real content in it. After we built initial set of our website, we link all pages together. I was mainly working on shop, about and shopping cart pages and make the website responsive. Also, I found images for our website.</p>
-					<h5 class="subtitle">Stage 3 - Developing</h5>
-					<p>Keeping from last week, we were supposed to fill in all real content. Images and icons were supposed to be filled as well. This a week, a full functional website should be prepared. I finalized our images and button styles to make them look more consistent.</p>
-			</div>
-		</section> -->
-
-		<section class="section">
-			<div class="box">
 				<div class="project-container">
 					<div class="project-category-container">
 						<p class="project-category">UX Design / User Research</p>
@@ -72,19 +50,60 @@
 					</div>
 				</div>
 			</div>
+		</section> -->
+
+		<section class="section">
+			<div class="project-container">
+				<div class="project-item">
+					<a href="nmgguidebot.html">
+						<figure class="project">
+							<div class="image-link-container">
+								<img src="img/guitebotimg.jpg" alt="NMG GuideBot" class="image-link">
+							</div>
+							<figcaption class="project-info">
+								<p class="project-category">UX Design / User Research</p>
+								<p class="project-name">NMG GUIDEBOT</p>
+							</figcaption>
+						</figure>
+					</a>
+				</div>
+			</div>
+
+			<div class="project-container">
+				<div class="project-item">
+					<a href="milo.html">
+						<figure class="project">
+							<div class="image-link-container">
+								<img src="img/milohome.jpg" alt="MILO." class="image-link">
+							</div>
+							<figcaption class="project-info">
+								<p class="project-category">UI / Website Design</p>
+								<p class="project-name">MILO.</p>
+							</figcaption>
+						</figure>
+					</a>
+				</div>
+			</div>
 		</section>
+		
 	</main>
-	<!-- <footer class="footer">
+	<footer class="footer">
 		<div class="footer-container">
+			<div class="footer-item copyright">
+				© 2019 Phoebe Lo
+			</div>
 			<div class="footer-item">
-				<h5>
-					<a href="index.html">style guide</a>
-				</h5>
-				<h5>
-					<a href="https://github.com/PhoebeYCLo/Project3">github</a>
-				</h5>
+				<a href="index.html" class="footer-link">style guide</a>
+			</div>
+			
+			<div class="footer-item">
+				<a href="index.html#citations" class="footer-link">citations</a>
+			</div>
+			
+			<div class="footer-item">
+				<a href="https://github.com/PhoebeYCLo/Project3" class="footer-link" target="_blank">github</a>
 			</div>
 		</div>
-	</footer> -->
+	</footer>
 </body>
 </html>
